[gd_scene load_steps=7 format=3 uid="uid://cj40q87hg8j0k"]

[ext_resource type="PackedScene" uid="uid://cqmh4t4ov7mja" path="res://scenes/enemies/enemy_template.tscn" id="1_2yayb"]
[ext_resource type="Script" path="res://scripts/enemies/dagger_demon/dagger_demon.gd" id="2_gawhf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7w72w"]
size = Vector2(48, 160)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n7s0a"]
size = Vector2(16, 16)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_3ypm5"]
b = Vector2(0, 51)

[sub_resource type="CircleShape2D" id="CircleShape2D_yo1lo"]
radius = 40.0

[node name="DaggerDemon" type="Node2D"]
script = ExtResource("2_gawhf")

[node name="EnemyTemplate" parent="." instance=ExtResource("1_2yayb")]
collision_mask = 1
floor_constant_speed = true
floor_block_on_wall = false
floor_snap_length = 2.0

[node name="EntityComponentSystem" parent="EnemyTemplate/Rotatable" index="0"]
collision_layer = 8

[node name="Shape" parent="EnemyTemplate/Rotatable/EntityComponentSystem" index="0"]
position = Vector2(0, -40)
shape = SubResource("RectangleShape2D_7w72w")

[node name="DamageHitboxComponent" parent="EnemyTemplate/Rotatable" index="1"]
position = Vector2(0, 0)

[node name="CollisionShape" parent="EnemyTemplate/Rotatable/DamageHitboxComponent" index="0"]
position = Vector2(0, 0)
shape = SubResource("RectangleShape2D_n7s0a")

[node name="CollisionPolygon" parent="EnemyTemplate/Rotatable/DamageHitboxComponent" index="1"]
position = Vector2(5, 2)
polygon = PackedVector2Array(-5, -42, -29, -34, -37, -26, -45, -2, -37, 22, -29, 30, -5, 38, 19, 30, 27, 22, 35, -2, 27, -26, 19, -34)

[node name="LeftEdgeArea" type="Area2D" parent="EnemyTemplate/Rotatable" index="2"]
position = Vector2(-96, 0)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyTemplate/Rotatable/LeftEdgeArea"]
position = Vector2(39, 0)
shape = SubResource("SegmentShape2D_3ypm5")

[node name="RightEdgeArea" type="Area2D" parent="EnemyTemplate/Rotatable" index="3"]
position = Vector2(96, 0)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyTemplate/Rotatable/RightEdgeArea"]
position = Vector2(-39, 0)
shape = SubResource("SegmentShape2D_3ypm5")

[node name="Shape" parent="EnemyTemplate" index="1"]
shape = SubResource("CircleShape2D_yo1lo")

[node name="Label2" type="Label" parent="EnemyTemplate"]
offset_left = -24.0
offset_top = -72.0
offset_right = 23.0
offset_bottom = -49.0
text = "STATE"
horizontal_alignment = 1

[node name="Timers" type="Node" parent="."]

[node name="IdleTimer" type="Timer" parent="Timers"]
process_callback = 0
wait_time = 0.5
one_shot = true

[connection signal="body_exited" from="EnemyTemplate/Rotatable/LeftEdgeArea" to="." method="_on_left_edge_area_body_exited"]
[connection signal="body_exited" from="EnemyTemplate/Rotatable/RightEdgeArea" to="." method="_on_right_edge_area_body_exited"]
[connection signal="timeout" from="Timers/IdleTimer" to="." method="_on_idle_timer_timeout"]

[editable path="EnemyTemplate"]
[editable path="EnemyTemplate/Rotatable/DamageHitboxComponent"]
